--- a/lectures/scala_lecture_4.html
+++ b/lectures/scala_lecture_4.html
@@ -54,7 +54,7 @@
         <div class="slides">
             <section>
             <h1>Императивный стиль программирования</h1>
-            <img src="img/lecture_x/slide2.png">
+            <img src="img/lecture_4/slide2.png">
             </section>
         </div>
 
@@ -62,7 +62,7 @@
         
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide3.png">
+                <img width="80%" src="img/lecture_4/slide3.png">
             </section>
         </div>
 
@@ -84,90 +84,90 @@
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide6.png">
+                <img width="80%" src="img/lecture_4/slide6.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide7.png">
+                <img width="80%" src="img/lecture_4/slide7.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide8.png">
+                <img width="80%" src="img/lecture_4/slide8.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide9.png">
+                <img width="80%" src="img/lecture_4/slide9.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide11.png">
+                <img width="80%" src="img/lecture_4/slide11.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide12.png">
+                <img width="80%" src="img/lecture_4/slide12.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide9.png">
+                <img width="80%" src="img/lecture_4/slide9.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide14.png">
+                <img width="80%" src="img/lecture_4/slide14.png">
             </section>
         </div>
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide15.png">
-            </section>
-        </div>
-
-        <div class="slides">
-            <section>
-                <img width="80%" src="img/lecture_x/slide16.png">
+                <img width="80%" src="img/lecture_4/slide15.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide17.png">
+                <img width="80%" src="img/lecture_4/slide16.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide18.png">
+                <img width="80%" src="img/lecture_4/slide17.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide19.png">
+                <img width="80%" src="img/lecture_4/slide18.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide20.png">
+                <img width="80%" src="img/lecture_4/slide19.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide21.png">
+                <img width="80%" src="img/lecture_4/slide20.png">
+            </section>
+        </div>
+
+        <div class="slides">
+            <section>
+                <img width="80%" src="img/lecture_4/slide21.png">
             </section>
         </div>
 
@@ -191,7 +191,7 @@
                 <div style="margin: auto; margin-top: 5%; width: 60%; font-size: 40pt; word-wrap: break-word;">
                     <b>Функцией</b> называется соответствие между двумя множествами, при котором каждому элементу одного множества соответствует единственный элемент другого множества
                 </div>
-                <img width="40%" src="img/lecture_x/function.jpeg">
+                <img width="40%" src="img/lecture_4/function.jpeg">
             </section>
         </div>
 
@@ -209,7 +209,7 @@
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide26.png">
+                <img width="80%" src="img/lecture_4/slide26.png">
             </section>
         </div>
 
@@ -228,7 +228,7 @@
 
         <div class="slides">
             <section>
-                <img width="80%" style="margin-top: 3%;" src="img/lecture_x/slide28.png">
+                <img width="80%" style="margin-top: 3%;" src="img/lecture_4/slide28.png">
             </section>
         </div>
 
@@ -256,14 +256,14 @@
                 <div style="margin: auto; margin-top: 5%; width: 60%; font-size: 40pt; word-wrap: break-word;">
                     <b>Побочные эффекты</b> (side effects) — любые действия работающей программы, изменяющие среду выполнения
                 </div>
-                <img width="30%" src="img/lecture_x/side_effect_joke.png">
+                <img width="30%" src="img/lecture_4/side_effect_joke.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
                 <div style="display: flex; width: 80%; margin: auto; margin-top: 7%;">
-                    <img width="50%" src="img/lecture_x/elephant.jpg">
+                    <img width="50%" src="img/lecture_4/elephant.jpg">
                     <div style="width: 40%; margin: auto; font-size: 40pt;"><b>Side effect</b> - слон в посудной лавке нашего идеального функционального мира</div>
                 </div>
             </section>
@@ -279,7 +279,7 @@
                     <li style="margin-bottom: 20px;">Запрос в базу данных</li>
                     <li style="margin-bottom: 20px;">Нахождение случайного числа и другие</li>
                 </ul>
-                <img style="margin-left: 20px;" src="img/lecture_x/nullException.png">
+                <img style="margin-left: 20px;" src="img/lecture_4/nullException.png">
             </section>
         </div>
 
@@ -296,61 +296,61 @@
 
         <div class="slides">
             <section>
-                <img width="80%" style="margin-top: 3%;" src="img/lecture_x/slide35.png">
+                <img width="80%" style="margin-top: 3%;" src="img/lecture_4/slide35.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide36.png">
+                <img width="80%" src="img/lecture_4/slide36.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" style="margin-top: 3%;" src="img/lecture_x/slide37.png">
+                <img width="80%" style="margin-top: 3%;" src="img/lecture_4/slide37.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide38.png">
+                <img width="80%" src="img/lecture_4/slide38.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide39.png">
+                <img width="80%" src="img/lecture_4/slide39.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide40.png">
+                <img width="80%" src="img/lecture_4/slide40.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%"  src="img/lecture_x/slide41.png">
+                <img width="80%"  src="img/lecture_4/slide41.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="60%" src="img/lecture_x/slide42.png">
+                <img width="60%" src="img/lecture_4/slide42.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide43.png">
+                <img width="80%" src="img/lecture_4/slide43.png">
             </section>
         </div>
 
         <div class="slides">
             <section>
-                <img width="80%" style="margin-top: 3%;" src="img/lecture_x/slide44.png">
+                <img width="80%" style="margin-top: 3%;" src="img/lecture_4/slide44.png">
             </section>
         </div>
 
@@ -374,7 +374,7 @@
 
         <div class="slides">
             <section>
-                <img width="80%" src="img/lecture_x/slide47.png">
+                <img width="80%" src="img/lecture_4/slide47.png">
             </section>
         </div>
 
